update latest working code